# resume-screening-env

./: .gitignore  README.md  app.py  inference.py  openenv.yaml  pyproject.toml
env/: environment.py  grader.py  models.py  tasks.py
server/: app.py
