[project]
name = "resume-screening-env"
version = "0.1.0"
description = "OpenEnv Resume Screening Environment"
authors = [
    { name="Tiya Jain" }
]

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "requests",
    "openai",
    "openenv>=0.2.0"   
]

[project.scripts]
server = "app:app"   

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
